hopefully fix overflows

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -9,3 +9,12 @@
 body {
     background-color: #fcf9f0;
 }
+html, body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+.container {
+  width: 100%;
+  box-sizing: border-box;
+}
